# Pettichat-Tech-Company-Project

./: CMakeLists.txt  README.md  partitions.csv  sensor_data_dump.txt
main/: CMakeLists.txt  config.h  es8311.c  es8311.h  es8311_reg.h  main.c  stream.py
micro_speech/main/: audio_provider.cc  audio_provider.h  example_config.h  idf_component.yml  main_functions.cc  main_functions.h
